Bug 83733 - FILEOPEN: MS .docx colors lost in table
Summary: FILEOPEN: MS .docx colors lost in table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.3
Keywords: filter:docx
Depends on:
Blocks:
 
Reported: 2014-09-10 19:55 UTC by Luke
Modified: 2017-06-02 04:12 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
tri-colored table (12.22 KB, application/vnd.ms-word.document.12)
2014-09-10 19:55 UTC, Luke
Details
Comparison of Writer 4.3 vs AOO 4.1 vs Word 2013 (242.93 KB, image/png)
2014-09-10 19:56 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2014-09-10 19:55:07 UTC
Created attachment 106082 [details]
tri-colored table

This bug was tested LibreOffice v4.1 running in windows 7. It appears that LibreOffice loses some colors importing MS docx files with tables.

Steps to reproduce the bug:
1. Open attached Demo-Hayden-Management-tableOnly.docx document in Word or OpenOffice
2. Open attached Demo-Hayden-Management-tableOnly.docx document in Writer
3. Compare the documents. 

Note how the light pink color in row 2011 and 2013 is white in LO 4.1 and later.
Comment 1 Luke 2014-09-10 19:56:21 UTC
Created attachment 106083 [details]
Comparison of Writer 4.3 vs AOO 4.1 vs Word 2013
Comment 2 Matthew Francis 2014-09-16 03:55:39 UTC
Reproduced on OSX 10.9.4, on LibreOffice:
4.0.0.3
4.3.1.2
4.4 master (* I wondered if this might be bug 83312, but that's fixed on master already)

3.3.0 doesn't show the colours in the document at all, so this may be something that OOo fixed independently rather than a regression

-> NEW
-> Component: filters and storage
Comment 3 Luke 2014-09-16 20:58:50 UTC
I don't think this is a regression. 
LibreOffice 3.5.7.2:  no colors
LibreOffice 3.6: bad/light pink color is white

This bug was fixed in Apache OpenOffice between 3.4.1 and 4.0.
AOO 3.4.1: header pink, table white
AOO 4.0.0: good

Devs, would it be useful to narrow this down in AOO commits? Maybe need to cherry pick a commit.
Comment 4 Luke 2014-10-19 07:51:30 UTC
This bug was fixed in a recent 4.4.0.0.alpha0+ master build. Great work team!
Comment 5 Commit Notification 2014-11-05 20:33:22 UTC
Marco Cecchetti committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fae7fed54206b98cc3aac24abcdac384d3bd9437&h=libreoffice-4-3

fix bnc#624546 (fdo#83733) slide pane cut/copy/paste in outline view

It will be available in 4.3.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Robinson Tryon (qubit) 2015-12-17 04:37:02 UTC Comment hidden (obsolete)
Comment 7 vihsa 2017-06-02 04:12:20 UTC
verified
Version: 5.5.0.0.alpha0+
Build ID: 066665644b398a882e6cded98af5bb060af41d76
TinderBox: Android-ARM@24-Bytemark-Hosting, Branch: Master, Time: 2017-06-01 00:30:43