sd/source/ui/view/drviews1.cxx
@@ -91,6 +91,15 @@ namespace sd {
 void DrawViewShell::Activate(bool bIsMDIActivate)
 {
     ViewShell::Activate(bIsMDIActivate);
+
+    // When the mode is switched to normal the main view shell grabs focus.
+    // This is done for getting cut/copy/paste commands on slides in the left
+    // pane (slide sorter view shell) to work properly.
+    SfxShell* pTopViewShell = this->GetViewShellBase().GetViewShellManager()->GetTopViewShell();
+    if (pTopViewShell && pTopViewShell == this)
+    {
+        this->GetActiveWindow()->GrabFocus();
+    }
 }
 
 void DrawViewShell::UIActivating( SfxInPlaceClient* pCli )
